# siriuspad

./: .all-contributorsrc  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml
scripts/: generate_android_icons.py  install-linux.sh  install-windows.ps1
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  models.rs  storage.rs
src-tauri/src/commands/: fs.rs  history.rs  mod.rs  platform.rs  runner.rs  terminal.rs  updater.rs
src/components/editor/: FrontmatterBar.tsx  HistoryPanel.tsx  MarkdownPreview.tsx  NoteBlocks.tsx  NoteEditor.tsx  SnippetRunner.tsx  Terminal.tsx
src/components/layout/: EditorPane.tsx  MobileHeader.tsx  ResizeBorders.tsx  RightPanel.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  TitleBar.tsx
src/components/sidebar/: NoteList.tsx  SearchResults.tsx  WorkspaceTree.tsx
src/components/ui/: CommandPalette.tsx  ConfirmModal.tsx  Modal.tsx  (+8 more)
src/hooks/: useNotes.ts  useRunner.ts  useUpdater.ts
src/i18n/: index.ts
src/lib/: codemirror.ts  constants.ts  date.ts  export.ts  gist.ts  onboarding.ts  parser.ts  tagColor.ts  themes.ts  workspaceLabel.ts
src/store/: notes.ts  settings.ts  ui.ts  workspace.ts
src/styles/: codemirror-theme.css  globals.css
(+3 files in other folders)
