[package]
name = "siriuspad"
version = "1.0.27"
description = "A local-first technical scratchpad for developers."
authors = ["SiriusX"]
license = "MIT"
repository = "https://github.com/SiriusXofc/siriuspad"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "siriuspad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
regex = "1.12.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
tempfile = "3.23.0"
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.4.3"
tauri-plugin-fs = "2.4.3"
tauri-plugin-shell = "2.3.3"
tauri-plugin-store = "2.4.1"
tauri-plugin-updater = "2"
tauri-plugin-log = "2"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
walkdir = "2.5.0"
which = "8.0.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
portable-pty = "0.9.0"
tauri-plugin-global-shortcut = "2.3.1"
